--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,1 +1,32 @@
-    <h1>Ini adalah Halaman contact</h1>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-md-8">
+            <h2>Daftar Contact</h2>
+            
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Name</th>
+                      <th scope="col">No Handphone</th>
+                      <th scope="col">Email</th>
+                      <th scope="col">Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                      <% contacts.forEach((contact, i) => {i++ %>
+                        <tr>
+                            <th scope="row"><%= i++ %> </th>
+                            <td><%= contact.nama %></td>
+                            <td><%= contact.nohp  %></td>
+                            <td><%= contact.email  %></td>
+                            <td>
+                                <a href="/contact/<%= contact.nama %>" class="btn btn-info badge rounded-pill"><i class="bi bi-info-circle"></i> detail</a>
+                            </td>
+                          </tr>
+                      <% }) %>
+                  </tbody>
+              </table>
+        </div>
+    </div>
+</div>
