finished fitur CRUD with express, mongo and nodeJS

--- a/views/edit-contact.ejs
+++ b/views/edit-contact.ejs
@@ -11,8 +11,9 @@
                 </ul>
               </div>
             <% } %>
-            <form method="post" action="/contact/update">
-              <input type="hidden" name="oldNama" value="<%= contact.oldNama || contact.nama %>">
+            <form method="post" action="/contact?_method=PUT">
+              <input type="hidden" name="_id" value="<%= contact._id %>" />
+              <input type="hidden" name="oldNama" value="<%= contact.oldNama || contact.nama %>" />
                 <div class="mb-3">
                   <label for="nama" class="form-label">Name</label>
                   <input type="text" class="form-control" id="nama" name="nama" required value="<%= contact.nama %>">
