--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -15,7 +15,11 @@
                   <h6 class="card-subtitle mb-2 text-muted"><%= contact.nohp %></h6>
                   <p class="card-text"><%= contact.email %></p>
                   <a href="/contact/edit/<%= contact.nama %>" class="btn btn-warning badge">Edit</a>
-                  <a href="/contact/delete/<%= contact.nama %>" class="btn btn-danger badge" onclick="return confirm('Are you sure?');">Hapus</a>
+                  <!-- <a href="/contact/delete/<%= contact.nama %>" class="btn btn-danger badge" onclick="return confirm('Are you sure?');">Hapus</a> -->
+                  <form action="/contact?_method=DELETE" method="POST" class="d-inline">
+                    <input type="hidden" name="nama" value="<%= contact.nama %>">
+                    <button type="submit" class="btn btn-danger badge" onclick="return confirm('Are you sure?');">hapus</button>
+                  </form>
                   <a href="/contact" class="card-link d-block mt-3">&laquo; Return to contact</a>
                 </div>
               </div>
